remove references to diego-ci
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>

--- a/scripts/ci/create_diego_dev_release.build.yml
+++ b/scripts/ci/create_diego_dev_release.build.yml
@@ -5,7 +5,7 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: diego-release
-  - name: diego-ci
+  - name: cephfs-bosh-release
   - name: version
 
 outputs:
