--- a/scripts/ci/create_cephfs_release.build.yml
+++ b/scripts/ci/create_cephfs_release.build.yml
@@ -6,5 +6,10 @@ image: docker:///cloudfoundry/diego-pipeline
 inputs:
   - name: cephfs-bosh-release
 
+params:
+  BOSH_TARGET: replace-me
+  BOSH_USERNAME: replace-me
+  BOSH_PASSWORD: replace-me
+
 run:
   path: cephfs-bosh-release/scripts/ci/create_cephfs_release
