ci: create_cephfs makes tarballs and versions, and uses s3
Signed-off-by: Connor Braa <cbraa@pivotal.io>

--- a/scripts/ci/create_cephfs_release.build.yml
+++ b/scripts/ci/create_cephfs_release.build.yml
@@ -5,11 +5,10 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: cephfs-bosh-release
+  - name: version
 
-params:
-  BOSH_TARGET: replace-me
-  BOSH_USERNAME: replace-me
-  BOSH_PASSWORD: replace-me
+outputs:
+  - created-cephfs-bosh-release
 
 run:
   path: cephfs-bosh-release/scripts/ci/create_cephfs_release
