upload release when we create it
Signed-off-by: Luke Woydziak <luke.woydziak@emc.com>

--- a/scripts/ci/create_cephfs_release.build.yml
+++ b/scripts/ci/create_cephfs_release.build.yml
@@ -10,5 +10,10 @@ inputs:
 outputs:
   - name: created-cephfs-bosh-release
 
+params:
+  BOSH_TARGET: replace-me
+  BOSH_USERNAME: replace-me
+  BOSH_PASSWORD: replace-me
+
 run:
   path: cephfs-bosh-release/scripts/ci/create_cephfs_release
