remove references to diego-ci
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>
Signed-off-by: Connor Braa <cbraa@pivotal.io>

--- a/scripts/ci/create_diego_dev_release.build.yml
+++ b/scripts/ci/create_diego_dev_release.build.yml
@@ -5,11 +5,11 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: diego-release
-  - name: diego-ci
+  - name: cephfs-bosh-release
   - name: version
 
 outputs:
   - name: created-diego-release
 
 run:
-  path: diego-ci/concourse/create_diego_dev_release
+  path: cephfs-bosh-release/ci/create_diego_dev_release
