remove deploy cephfs scripts and make scripts to generate cephfs cluster manifest
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>
Signed-off-by: Luke Woydziak <luke.woydziak@emc.com>

--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -6,11 +6,13 @@ image: docker:///cloudfoundry/diego-pipeline
 inputs:
   - name: cephfs-bosh-release
 
+outputs:
+  - name: generated-manifest
+
 params:
   BOSH_TARGET: replace-me
   BOSH_USERNAME: replace-me
   BOSH_PASSWORD: replace-me
-  DEPLOYMENT_NAME: replace-me
 
 run:
-  path: cephfs-bosh-release/scripts/ci/deploy_cephfs_cluster
+  path: cephfs-bosh-release/scripts/ci/generate_cephfs_cluster_manifest
