--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -60,6 +60,7 @@ resource_pools:
       version: latest
     cloud_properties:
       instance_type: m3.medium
+      availability_zone: us-east-1a
 
 compilation:
   workers: 1
