--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -53,6 +53,8 @@ networks:
     static:
     - 10.10.200.10 - 10.10.200.105
   type: manual
+- name: public
+  type: vip
 
 resource_pools:
   - name: ceph-resourcepool
