Give cephbroker a static ip [#116910181](https://www.pivotaltracker.com/story/show/116910181)
Signed-off-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -27,7 +27,8 @@ jobs:
     networks:
     - name: ceph-subnet
       default: [dns, gateway]
-
+    - name: public
+      static_ips: [52.204.240.224]
     persistent_disk: 25000 # for consul
     templates:
     - release: cephfs
