--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,6 @@
 	path = src/github.com/gorilla/mux
 	url = http://github.com/gorilla/mux
 
+[submodule "src/github.com/cloudfoundry-incubator/persi-acceptance-tests"]
+	path = src/github.com/cloudfoundry-incubator/persi-acceptance-tests
+	url = https://github.com/cloudfoundry-incubator/persi-acceptance-tests.git
