--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -10,9 +10,8 @@ outputs:
   - name: generated-manifest
 
 params:
-  BOSH_TARGET: replace-me
-  BOSH_USERNAME: replace-me
-  BOSH_PASSWORD: replace-me
+  CEPHFS_KEYRING_STUB: replace-me
+  DIRECTOR_STUB: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/generate_cephfs_cluster_manifest
