Add deployments-runtime input to generate-cephfs-cluster-manifest task [#116910181](https://www.pivotaltracker.com/story/show/116910181)
Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -5,6 +5,7 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: cephfs-bosh-release
+  - name: deployments-runtime
 
 outputs:
   - name: generated-manifest
