Remove unused params and erroneous pushd from healthcheck and cert tasks
Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/scripts/ci/healthcheck.build.yml
+++ b/scripts/ci/healthcheck.build.yml
@@ -7,10 +7,7 @@ inputs:
   - name: cephfs-bosh-release
   - name: deployments-runtime
 
-params:
-  BOSH_TARGET: replace-me
-  BOSH_USERNAME: replace-me
-  BOSH_PASSWORD: replace-me
+params: {}
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_healthcheck
