manifest generation will codeploy route-registrar job so cephfs-broker gets 2 routes
[finishes #121611179]

Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -13,6 +13,7 @@ outputs:
 params:
   CEPHFS_KEYRING_STUB: replace-me
   DIRECTOR_STUB: replace-me
+  CF_MANIFEST: replace-me
 
 run:
   path: cephfs-bosh-release/scripts/ci/generate_cephfs_cluster_manifest
