generate cephfs cluster job now takes a cf manifest
Signed-off-by: Connor Braa <cbraa@pivotal.io>

--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -6,6 +6,7 @@ image: docker:///cloudfoundry/diego-pipeline
 inputs:
   - name: cephfs-bosh-release
   - name: deployments-runtime
+  - name: generated-manifest
 
 outputs:
   - name: generated-manifest
