--- a/scripts/ci/generate_cephfs_cluster_manifest.build.yml
+++ b/scripts/ci/generate_cephfs_cluster_manifest.build.yml
@@ -7,6 +7,7 @@ inputs:
   - name: cephfs-bosh-release
   - name: deployments-runtime
   - name: generated-manifest
+    path: generated-cf-manifest
 
 outputs:
   - name: generated-manifest
