--- a/templates/cephfs-manifest-boshlite.yml
+++ b/templates/cephfs-manifest-boshlite.yml
@@ -25,6 +25,9 @@ jobs:
       cephbroker:
         service-name: cephbroker-acc
         service-id: cephbroker-acc
+        plan-name: free-acc
+        plan-id: free-acc-plan-guid
+        plan-desc: free ceph filesystem for acceptance testing
     templates:
     - release: cephfs
       name: cephbroker
