--- a/.gitmodules
+++ b/.gitmodules
@@ -19,15 +19,6 @@
 [submodule "src/github.com/bmizerany/pat"]
 	path = src/github.com/bmizerany/pat
 	url = https://github.com/bmizerany/pat.git
-[submodule "src/github.com/cloudfoundry-incubator/cf_http"]
-	path = src/github.com/cloudfoundry-incubator/cf_http
-	url = https://github.com/cloudfoundry-incubator/cf_http
-[submodule "src/github.com/cloudfoundry-incubator/cf-debug-server"]
-	path = src/github.com/cloudfoundry-incubator/cf-debug-server
-	url = https://github.com/cloudfoundry-incubator/cf-debug-server.git
-[submodule "src/github.com/cloudfoundry-incubator/cf-lager"]
-	path = src/github.com/cloudfoundry-incubator/cf-lager
-	url = https://github.com/cloudfoundry-incubator/cf-lager.git
 [submodule "src/github.com/tedsuo/ifrit"]
 	path = src/github.com/tedsuo/ifrit
 	url = https://github.com/tedsuo/ifrit.git
@@ -61,3 +52,30 @@
 [submodule "src/github.com/gorilla/mux"]
 	path = src/github.com/gorilla/mux
 	url = http://github.com/gorilla/mux
+[submodule "src/github.com/cloudfoundry-incubator/voldriver"]
+	path = src/github.com/cloudfoundry-incubator/voldriver
+	url = https://github.com/cloudfoundry-incubator/voldriver.git
+[submodule "src/github.com/cloudfoundry/dropsonde"]
+	path = src/github.com/cloudfoundry/dropsonde
+	url = https://github.com/cloudfoundry/dropsonde.git
+[submodule "src/github.com/cloudfoundry-incubator/localdriver"]
+	path = src/github.com/cloudfoundry-incubator/localdriver
+	url = https://github.com/cloudfoundry-incubator/localdriver.git
+[submodule "src/github.com/cloudfoundry/sonde-go"]
+	path = src/github.com/cloudfoundry/sonde-go
+	url = https://github.com/cloudfoundry/sonde-go.git
+[submodule "src/github.com/gogo/protobuf"]
+	path = src/github.com/gogo/protobuf
+	url = https://github.com/gogo/protobuf.git
+[submodule "src/code.cloudfoundry.org/cfhttp"]
+	path = src/code.cloudfoundry.org/cfhttp
+	url = https://github.com/cloudfoundry/cfhttp.git
+[submodule "src/code.cloudfoundry.org/cflager"]
+	path = src/code.cloudfoundry.org/cflager
+	url = https://github.com/cloudfoundry/cflager.git
+[submodule "src/code.cloudfoundry.org/debugserver"]
+	path = src/code.cloudfoundry.org/debugserver
+	url = https://github.com/cloudfoundry/debugserver.git
+[submodule "src/code.cloudfoundry.org/runtimeschema"]
+	path = src/code.cloudfoundry.org/runtimeschema
+	url = https://github.com/cloudfoundry/runtimeschema.git
