--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,6 @@
 [submodule "src/github.com/cloudfoundry-incubator/volman"]
 	path = src/github.com/cloudfoundry-incubator/volman
 	url = https://github.com/cloudfoundry-incubator/volman.git
-[submodule "src/github.com/pivotal-golang/lager"]
-	path = src/github.com/pivotal-golang/lager
-	url = https://github.com/pivotal-golang/lager.git
 [submodule "src/github.com/tedsuo/rata"]
 	path = src/github.com/tedsuo/rata
 	url = https://github.com/tedsuo/rata.git
@@ -28,9 +25,6 @@
 [submodule "src/github.com/nu7hatch/gouuid"]
 	path = src/github.com/nu7hatch/gouuid
 	url = https://github.com/nu7hatch/gouuid.git
-[submodule "src/github.com/pivotal-golang/clock"]
-	path = src/github.com/pivotal-golang/clock
-	url = https://github.com/pivotal-golang/clock.git
 [submodule "src/github.com/cloudfoundry-incubator/volume_driver_cert"]
 	path = src/github.com/cloudfoundry-incubator/volume_driver_cert
 	url = https://github.com/cloudfoundry-incubator/volume_driver_cert.git
@@ -58,9 +52,6 @@
 [submodule "src/github.com/cloudfoundry/dropsonde"]
 	path = src/github.com/cloudfoundry/dropsonde
 	url = https://github.com/cloudfoundry/dropsonde.git
-[submodule "src/github.com/cloudfoundry-incubator/localdriver"]
-	path = src/github.com/cloudfoundry-incubator/localdriver
-	url = https://github.com/cloudfoundry-incubator/localdriver.git
 [submodule "src/github.com/cloudfoundry/sonde-go"]
 	path = src/github.com/cloudfoundry/sonde-go
 	url = https://github.com/cloudfoundry/sonde-go.git
@@ -79,3 +70,9 @@
 [submodule "src/code.cloudfoundry.org/runtimeschema"]
 	path = src/code.cloudfoundry.org/runtimeschema
 	url = https://github.com/cloudfoundry/runtimeschema.git
+[submodule "src/code.cloudfoundry.org/clock"]
+	path = src/code.cloudfoundry.org/clock
+	url = https://github.com/cloudfoundry/clock.git
+[submodule "src/code.cloudfoundry.org/lager"]
+	path = src/code.cloudfoundry.org/lager
+	url = https://github.com/cloudfoundry/lager.git
