local broker replaces CephFS in CI - local driver make bosh release (rename version to ceph-version) [#121630277](https://www.pivotaltracker.com/story/show/121630277)
Signed-off-by: Luke Woydziak <luke.woydziak@emc.com>

--- a/scripts/ci/create_cephfs_release.build.yml
+++ b/scripts/ci/create_cephfs_release.build.yml
@@ -5,7 +5,7 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: cephfs-bosh-release
-  - name: version
+  - name: ceph-version
 
 outputs:
   - name: created-cephfs-bosh-release
