local broker replaces CephFS in CI -job to bosh up localbroker -adjust manifest to install localdriver [#121630277](https://www.pivotaltracker.com/story/show/121630277)
Signed-off-by: Kalai Wei <kawei@pivotal.io>

--- a/scripts/ci/generate_deployment_manifests.build.yml
+++ b/scripts/ci/generate_deployment_manifests.build.yml
@@ -10,7 +10,7 @@ inputs:
   - name: cf-release
 
 outputs:
-  - name: generated-manifest
+  - name: generated-manifest-ceph
 
 params:
   DEPLOYMENTS_DIR: ~
