--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -48,7 +48,7 @@ jobs:
             tags:
               component: pats-broker
             uris:
-            - pats-broker.persi.cf-app.com
+            - pats-broker.ceph.persi.cf-app.com
     templates:
     - release: cephfs
       name: cephbroker
@@ -103,6 +103,7 @@ networks:
     range: 10.10.200.0/24
     reserved:
     - 10.10.200.2 - 10.10.200.9
+    - 10.10.200.111 - 10.10.200.115
     static:
     - 10.10.200.10 - 10.10.200.105
   type: manual
