local broker replaces CephFS in CI - correct uri to match [#121630277](https://www.pivotaltracker.com/story/show/121630277)
Signed-off-by: Luke Woydziak <luke.woydziak@emc.com>

--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -48,7 +48,7 @@ jobs:
             tags:
               component: pats-broker
             uris:
-            - pats-broker.ceph.persi.cf-app.com
+            - pats-broker.persi.cf-app.com
     templates:
     - release: cephfs
       name: cephbroker
