volume_driver_cert -> code.cloudfoundry.org, fix sync scripts, fix gitignore [#127201811](https://www.pivotaltracker.com/story/show/127201811)

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,13 @@ src/github.com/klauspost/
 src/github.com/nsf/
 src/github.com/rogpeppe/
 src/golang.org/
+
+#intellij goo
 cephfs-bosh-release.iml
+
+# gosub and friends
+src/github.com/vito/gosub
+src/github.com/codegangsta/cli
+
+# certs suite for locally running tests
+src/code.cloudfoundry.org/volume_driver_cert/
