--- a/.gitmodules
+++ b/.gitmodules
@@ -10,24 +10,17 @@
 	path = src/github.com/onsi/gomega
 	url = https://github.com/onsi/gomega
 	branch = master
-[submodule "src/github.com/cloudfoundry-incubator/volman"]
-	path = src/github.com/cloudfoundry-incubator/volman
-	url = https://github.com/cloudfoundry-incubator/volman.git
 [submodule "src/github.com/tedsuo/rata"]
 	path = src/github.com/tedsuo/rata
 	url = https://github.com/tedsuo/rata
+	branch = master
 [submodule "src/github.com/bmizerany/pat"]
 	path = src/github.com/bmizerany/pat
 	url = https://github.com/bmizerany/pat
+	branch = master
 [submodule "src/github.com/tedsuo/ifrit"]
 	path = src/github.com/tedsuo/ifrit
 	url = https://github.com/tedsuo/ifrit
-[submodule "src/github.com/jessevdk/go-flags"]
-	path = src/github.com/jessevdk/go-flags
-	url = https://github.com/jessevdk/go-flags.git
-[submodule "src/github.com/nu7hatch/gouuid"]
-	path = src/github.com/nu7hatch/gouuid
-	url = https://github.com/nu7hatch/gouuid.git
 [submodule "src/github.com/cloundfoundry/gunk"]
 	path = src/github.com/cloundfoundry/gunk
 	url = https://github.com/cloudfoundry/gunk.git
@@ -37,31 +30,15 @@
 [submodule "src/github.com/cloudfoundry-incubator/cephbroker"]
 	path = src/github.com/cloudfoundry-incubator/cephbroker
 	url = https://github.com/cloudfoundry-incubator/cephbroker
-[submodule "src/github.com/fatih/motion"]
-	path = src/github.com/fatih/motion
-	url = http://github.com/fatih/motion
-[submodule "src/github.com/gorilla/context"]
-	path = src/github.com/gorilla/context
-	url = http://github.com/gorilla/context
-[submodule "src/github.com/gorilla/mux"]
-	path = src/github.com/gorilla/mux
-	url = http://github.com/gorilla/mux
+	branch = master
 [submodule "src/github.com/cloudfoundry-incubator/voldriver"]
 	path = src/github.com/cloudfoundry-incubator/voldriver
 	url = https://github.com/cloudfoundry-incubator/voldriver
 	branch = master
-[submodule "src/github.com/cloudfoundry/dropsonde"]
-	path = src/github.com/cloudfoundry/dropsonde
-	url = https://github.com/cloudfoundry/dropsonde.git
-[submodule "src/github.com/cloudfoundry/sonde-go"]
-	path = src/github.com/cloudfoundry/sonde-go
-	url = https://github.com/cloudfoundry/sonde-go.git
-[submodule "src/github.com/gogo/protobuf"]
-	path = src/github.com/gogo/protobuf
-	url = https://github.com/gogo/protobuf.git
 [submodule "src/code.cloudfoundry.org/cfhttp"]
 	path = src/code.cloudfoundry.org/cfhttp
-	url = https://github.com/cloudfoundry/cfhttp.git
+	url = https://github.com/cloudfoundry/cfhttp
+	branch = master
 [submodule "src/code.cloudfoundry.org/cflager"]
 	path = src/code.cloudfoundry.org/cflager
 	url = https://github.com/cloudfoundry/cflager
@@ -70,9 +47,6 @@
 	path = src/code.cloudfoundry.org/debugserver
 	url = https://github.com/cloudfoundry/debugserver
 	branch = master
-[submodule "src/code.cloudfoundry.org/runtimeschema"]
-	path = src/code.cloudfoundry.org/runtimeschema
-	url = https://github.com/cloudfoundry/runtimeschema.git
 [submodule "src/code.cloudfoundry.org/clock"]
 	path = src/code.cloudfoundry.org/clock
 	url = https://github.com/cloudfoundry/clock
@@ -91,3 +65,4 @@
 [submodule "src/code.cloudfoundry.org/voldriver"]
 	path = src/code.cloudfoundry.org/voldriver
 	url = https://github.com/cloudfoundry-incubator/voldriver
+	branch = master
