--- a/.gitmodules
+++ b/.gitmodules
@@ -27,6 +27,7 @@
 [submodule "src/github.com/cloudfoundry/gunk"]
 	path = src/github.com/cloudfoundry/gunk
 	url = https://github.com/cloudfoundry/gunk
+	branch = master
 [submodule "src/github.com/cloudfoundry-incubator/cephbroker"]
 	path = src/github.com/cloudfoundry-incubator/cephbroker
 	url = https://github.com/cloudfoundry-incubator/cephbroker
@@ -68,7 +69,15 @@
 	branch = master
 [submodule "src/code.cloudfoundry.org/cephbroker"]
 	path = src/code.cloudfoundry.org/cephbroker
-	url = http://github.com/cloudfoundry-incubator/cephbroker
+	url = https://github.com/cloudfoundry-incubator/cephbroker
 [submodule "src/code.cloudfoundry.org/cephdriver"]
 	path = src/code.cloudfoundry.org/cephdriver
-	url = http://github.com/cloudfoundry-incubator/cephdriver
+	url = https://github.com/cloudfoundry-incubator/cephdriver
+[submodule "src/code.cloudfoundry.org/persi-acceptance-tests"]
+	path = src/code.cloudfoundry.org/persi-acceptance-tests
+	url = https://github.com/cloudfoundry-incubator/persi-acceptance-tests
+	branch = master
+[submodule "src/github.com/cloudfoundry-incubator/cf-test-helpers"]
+	path = src/github.com/cloudfoundry-incubator/cf-test-helpers
+	url = https://github.com/cloudfoundry-incubator/cf-test-helpers
+	branch = master
