--- a/.gitmodules
+++ b/.gitmodules
@@ -81,3 +81,7 @@
 	path = src/github.com/cloudfoundry-incubator/cf-test-helpers
 	url = https://github.com/cloudfoundry-incubator/cf-test-helpers
 	branch = master
+[submodule "src/code.cloudfoundry.org/goshims"]
+	path = src/code.cloudfoundry.org/goshims
+	url = https://github.com/cloudfoundry-incubator/goshims
+	branch = master
