deployments-runtime moved to dieployments-diego.  Updating concourse jobs accordingly
Signed-off-by: Kalai Wei <kawei@pivotal.io>

--- a/scripts/ci/run_acceptance_unix.build.yml
+++ b/scripts/ci/run_acceptance_unix.build.yml
@@ -5,7 +5,7 @@ image: docker:///cloudfoundry/inigo-ci
 
 inputs:
   - name: cephfs-bosh-release
-  - name: deployments-runtime
+  - name: deployments-diego
 
 params:
   TRANSPORT: unix
