Add each volume release [#120977577](https://www.pivotaltracker.com/story/show/120977577)
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>

--- a/scripts/ci/update-runtime-config.build.yml
+++ b/scripts/ci/update-runtime-config.build.yml
@@ -5,8 +5,11 @@ image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: deployments-diego
+  - name: cephfs-bosh-release
   - name: cephfs-bosh-release-tarball
+  - name: efs-volume-release
   - name: efs-volume-release-tarball
+  - name: local-volume-release
   - name: local-volume-release-tarball
 
 outputs: []
