Remove manual bosh upload [#120977577](https://www.pivotaltracker.com/story/show/120977577)
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>

--- a/scripts/ci/create_cephfs_release.build.yml
+++ b/scripts/ci/create_cephfs_release.build.yml
@@ -10,10 +10,7 @@ inputs:
 outputs:
   - name: created-cephfs-bosh-release
 
-params:
-  BOSH_TARGET: replace-me
-  BOSH_USERNAME: replace-me
-  BOSH_PASSWORD: replace-me
+params: []
 
 run:
   path: cephfs-bosh-release/scripts/ci/create_cephfs_release
