deployments-diego -> deployments-persi everywhere [#134562033](https://www.pivotaltracker.com/story/show/134562033)
Signed-off-by: Julian Hjortshoj <julian.hjortshoj@emc.com>

--- a/scripts/ci/generate_deployment_manifests.build.yml
+++ b/scripts/ci/generate_deployment_manifests.build.yml
@@ -4,7 +4,7 @@ platform: linux
 image: docker:///cloudfoundry/diego-pipeline
 
 inputs:
-  - name: deployments-diego
+  - name: deployments-persi
   - name: diego-release
   - name: cephfs-bosh-release
   - name: cf-release
