Expose cephbroker' username and password command line parameters - Update CI scripts to specify a username and password for cephbroker [#135174273](https://www.pivotaltracker.com/story/show/135174273)
Signed-off-by: Paul Warren <paul.warren@emc.com>

--- a/scripts/ci/generate_deployment_manifests.build.yml
+++ b/scripts/ci/generate_deployment_manifests.build.yml
@@ -18,6 +18,8 @@ params:
   INFRASTRUCTURE: ~
   USE_GARDEN_RUNC: false
   USE_SQL: false
+  PATS_BROKER_USERNAME: ~
+  PATS_BROKER_PASSWORD: ~
 
 run:
   path: cephfs-bosh-release/scripts/ci/generate_deployment_manifests
