switch to sql for diego to (maybe) fix deployment failures

--- a/scripts/ci/generate_deployment_manifests.build.yml
+++ b/scripts/ci/generate_deployment_manifests.build.yml
@@ -16,8 +16,7 @@ params:
   DEPLOYMENTS_DIR: ~
   ENVIRONMENT_NAME: ~
   INFRASTRUCTURE: ~
-  USE_GARDEN_RUNC: false
-  USE_SQL: false
+  USE_GARDEN_RUNC: true
   PATS_BROKER_USERNAME: ~
   PATS_BROKER_PASSWORD: ~
 
