--- a/scripts/ci/run_driver_cert.build.yml
+++ b/scripts/ci/run_driver_cert.build.yml
@@ -8,7 +8,7 @@ inputs:
   - name: deployments-persi
 
 params:
-  TRANSPORT: unix
+  TRANSPORT: tcp
 
 run:
-  path: cephfs-bosh-release/scripts/ci/run_acceptance
+  path: cephfs-bosh-release/scripts/ci/run_driver_cert
