--- a/templates/cephfs-manifest-aws.yml
+++ b/templates/cephfs-manifest-aws.yml
@@ -105,7 +105,11 @@ networks:
     range: 10.10.200.0/24
     reserved:
     - 10.10.200.2 - 10.10.200.9
-    - 10.10.200.111 - 10.10.200.115
+    # -> ceph range 10.10.200.106-110 <-
+    # local range 10.10.200.111-115
+    # efs range 10.10.200.116-120
+    # nfs range 10.10.200.121-125
+    - 10.10.200.111 - 10.10.200.125
     static:
     - 10.10.200.10 - 10.10.200.105
   type: manual
