remove deployments-persi inputs and use bosh-env inputs
[152290994](https://www.pivotaltracker.com/story/show/152290994)

--- a/scripts/ci/run_driver_cert.build.yml
+++ b/scripts/ci/run_driver_cert.build.yml
@@ -5,7 +5,7 @@ rootfs_uri: docker:///cloudfoundry/inigo-ci
 
 inputs:
   - name: cephfs-bosh-release
-  - name: deployments-persi
+  - name: bosh-env
 
 params:
   TRANSPORT: tcp
