get cf-password from vars-store
[152290994](https://www.pivotaltracker.com/story/show/152290994)

--- a/scripts/ci/run_pats_ceph.build.yml
+++ b/scripts/ci/run_pats_ceph.build.yml
@@ -5,6 +5,7 @@ rootfs_uri: docker:///cloudfoundry/diego-pipeline
 
 inputs:
   - name: cephfs-bosh-release
+  - name: vars-store
 
 params:
   CF_USERNAME: replace-me
