set default CF_PASSWORD to be empty
[152290994](https://www.pivotaltracker.com/story/show/152290994)

--- a/scripts/ci/run_pats_ceph.build.yml
+++ b/scripts/ci/run_pats_ceph.build.yml
@@ -9,7 +9,7 @@ inputs:
 
 params:
   CF_USERNAME: replace-me
-  CF_PASSWORD: replace-me
+  CF_PASSWORD:
   CF_API_ENDPOINT: replace-me
   APPS_DOMAIN: replace-me
   APPLICATION_PATH: replace-me
