run bbl bosh environment scripts inline during cert testing since that's the only thing that actually works now

--- a/scripts/ci/run_driver_cert.build.yml
+++ b/scripts/ci/run_driver_cert.build.yml
@@ -4,11 +4,16 @@ platform: linux
 rootfs_uri: docker:///cloudfoundry/inigo-ci
 
 inputs:
-  - name: cephfs-bosh-release
-  - name: bosh-env
+- name: cephfs-bosh-release
+- name: deployments-persi
+- name: director-state
 
 params:
   TRANSPORT: tcp
+  BBL_IAAS: aws
+  BBL_AWS_REGION:
+  BBL_AWS_ACCESS_KEY_ID:
+  BBL_AWS_SECRET_ACCESS_KEY:
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_driver_cert
