--- a/scripts/ci/run_driver_cert.build.yml
+++ b/scripts/ci/run_driver_cert.build.yml
@@ -1,11 +1,15 @@
 ---
 platform: linux
-
-rootfs_uri: docker:///cloudfoundry/inigo-ci
+image_resource:
+  type: docker-image
+  source:
+    repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+    tag: v4.10.0
 
 inputs:
 - name: cephfs-bosh-release
 - name: director-state
+- name: persi-ci
 
 params:
   TRANSPORT: tcp
