remove unnecessary params and support BBL_STATE_DIR
[#157379470](https://www.pivotaltracker.com/story/show/157379470)

Signed-off-by: Kai Xiang <kxiang@pivotal.io>

--- a/scripts/ci/deploy-ceph.yml
+++ b/scripts/ci/deploy-ceph.yml
@@ -19,7 +19,4 @@ run:
 
 params:
   CEPHFS_KEYRING:
-  BBL_IAAS: aws
-  BBL_AWS_REGION:
-  BBL_AWS_ACCESS_KEY_ID:
-  BBL_AWS_SECRET_ACCESS_KEY:
+  BBL_STATE_DIR: bbl-state
