--- a/scripts/ci/run_driver_cert.build.yml
+++ b/scripts/ci/run_driver_cert.build.yml
@@ -14,9 +14,7 @@ inputs:
 params:
   TRANSPORT: tcp
   BBL_IAAS: aws
-  BBL_AWS_REGION:
-  BBL_AWS_ACCESS_KEY_ID:
-  BBL_AWS_SECRET_ACCESS_KEY:
+  BBL_STATE_DIR: bbl-state
 
 run:
   path: cephfs-bosh-release/scripts/ci/run_driver_cert
